# t5fastcam

./: CONTRIBUTORS  Cargo.toml  LICENSE-MIT  README.md
src/: device_info.rs  lib.rs  main.rs  main_loop.rs  shader.wgsl  video_capture.rs  video_frame.rs
