[package]
name = "t5fastcam"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9.0"
jpeg-decoder = "0.2.6"
pollster = "0.2.5"
v4l = "0.13"
wgpu = "0.13.1"
winit = "0.27"
